--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -1005,4 +1005,8 @@ Wir sind ein Team von Open-Source-Entwicklern, die hart daran arbeiten, ein werb
     <string name="compress_video_bitrate_low">Low</string>
     <!-- Compress format for video dialog -->
     <string name="compress_video_bitrate_very_low">Very Low</string>
+    <!-- Analysis compress images -->
+    <string name="analysis_compress_images">Compress Images</string>
+    <!-- Analysis compress videos -->
+    <string name="analysis_compress_videos">Compress Videos</string>
 </resources>
